...
            Padding(
              padding: const EdgeInsets.all(16.0),
              child: Row(
                children: [
                  Expanded(
                    child: RaisedButton(
                      key: Key('mySignUpButton'),
                      child: Text('Sign up'),
                      shape: StadiumBorder(),
                      onPressed: () {
                        Navigator.of(context).push(
                          MaterialPageRoute(
                            builder: (context) => RegistrationScreen(),
...
